tests/gabc-dump/should-fail/nested-elision.gabc
name: nested-elision;
%%
(c3) Nested <e>li<e>si</e>on</e>(g)
